moved graph.js into lib

--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <html>
-    <head>
-    </head>
-    <body>
-    </body>
-    <script src="./graph.js"></script>
+  <head>
+  </head>
+  <body>
+    <template id="node-container">
+      <div>
+      </div>
+    </template>
+    <template id="knob-control">
+      <div class="knob-control__knob">
+      </div>
+  </body>
+  <script src="./graph.js"></script>
+  <style>
+  </style>
 </html>
 
