some basic connection tests

--- a/tests/index.html
+++ b/tests/index.html
@@ -14,9 +14,9 @@
   </script>
   <script>
     let expect = chai.expect
-    describe('wasp', () => {
-      context('structure', () => {
-        it('has graph', () => {
+    describe('API Structure', () => {
+      context('Library Modules', () => {
+        it('wasp.Graph', () => {
           expect(wasp).to.have.property('Graph')
         })
       })
